[package]
name = "halloween-game-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "halloween-game-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
sha1 = "0.10"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = "3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
